fixed bugs on mobile size

--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,7 @@ nav button {
 nav button:not(.modal__button) {
   min-height: 60px;
   padding: 20px;
-  font-size: 20px;
+  font-size: 19px;
   background-color: inherit;
   border: none;
   cursor: pointer;
@@ -193,6 +193,7 @@ main {
   gap: 20px;
   max-width: 100%;
   justify-content: center;
+  margin-bottom: 10px;
 }
 .main__header-div img {
   width: 40px;
@@ -206,7 +207,6 @@ main {
 .main__header {
   font-size: 40px;
   font-weight: 700;
-  margin-bottom: 10px;
   min-width: max-content;
 }
 
